--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,6 @@
     margin: 0;
     padding: 0;
     font-family: 'Montserrat', sans-serif;
-
-
 }
 .side{
     max-width: 300px;
@@ -309,7 +307,7 @@
 
 @media (max-width: 768px) {
     .sidebartoggle {
-      display: block;
+      display: inline;
       max-height: 40px;
         font-size: 20px;
     border-radius: 90px;
@@ -320,6 +318,7 @@
     }
     .side{
         display: none;
+        height: 189vh;
     }
     .side.show {
         display: block;
@@ -330,7 +329,7 @@
         margin-top: 1em;
         display: flex;   
        margin-left: 1em;
-       gap: 30px
+       gap: 50px
     }
     .searchbar-input{   
         width: 80px;       
@@ -342,7 +341,10 @@
       .dashboard1 h3{
         font-size: 15px;
       }
-   
+      .sidebarprofile{
+        gap: 100px;
+    
+    }
 
 
    
@@ -353,41 +355,46 @@
         display: flex;
         flex-direction: column;
         gap: 15px;
+        margin-left: -5px;
      
     
+    }
+    .card{
+        width: 300px;
+        height: 119px;
+     
     }
     .charts2{
         display: flex;
         gap: 15px;
         flex-direction: column;
         align-items: stretch;
-       
-    
-       
+        margin-left: -5px;   
     }
     .chart{
-        width: 250px;
+        width: 295px;
         height: 200px;
         padding: 15px;
      
       
     }
     .doughnut{
-        width: 250px;
-        height: 300px;
+        width: 295px;
+        height: 350px;
         padding: 15px;
         position: relative;
     }
 
     .doughnut-per{
-        font-size: 25px;
+        font-size: 29px;
     }
     .doughnut-title{
-        top: 52%;
+        top: 50%;
+        left: 43%;
         
     }
     .product-table .searchbar-input{    
-        display: block;
+      
         width: 60px;       
         font-size: 10px;
       }
@@ -431,9 +438,10 @@
     }
     
     .productcontainer{
-        width: 270px;
+        width: 315px;
         height: auto;    
-        
+        margin-left: -5px;   
+
         padding: 5px;
       
     }
@@ -444,4 +452,44 @@
    
 
    
+}
+
+@media (max-width: 480px) {
+  
+     .side{
+        display: none;
+        height: 217vh;
+    }
+    .side.show {
+        display: block;
+    }
+
+   .dashboard1{
+      
+       gap: 80px
+    }   
+}
+@media (max-width: 480px) {
+
+    .card{
+        width: 320px;
+    }
+    .card-conatiner{
+        gap:25px   
+    }
+    .cardimg{
+        width: 110px;
+        height: 110px;
+    }
+    .chart{
+        width: 310px;  
+      
+    }
+    .doughnut{
+        width: 305px;
+    }
+
+    .productcontainer{
+        width: 323px;     
+    } 
 }
