--- a/src/App.css
+++ b/src/App.css
@@ -454,7 +454,7 @@
    
 }
 
-@media (max-width: 480px) {
+/* @media (max-width: 480px) {
   
      .side{
         display: none;
@@ -492,4 +492,4 @@
     .productcontainer{
         width: 323px;     
     } 
-}
+} */
