--- a/src/App.css
+++ b/src/App.css
@@ -454,7 +454,7 @@
    
 }
 
-/* @media (max-width: 480px) {
+ @media (max-width: 420px) {
   
      .side{
         display: none;
@@ -469,7 +469,7 @@
        gap: 80px
     }   
 }
-@media (max-width: 480px) {
+@media (max-width: 420px) {
 
     .card{
         width: 320px;
@@ -492,4 +492,4 @@
     .productcontainer{
         width: 323px;     
     } 
-} */
+} 
